ChangeLog

Upcoming version
[TASK]    Refine in-word search logic with SphinxSearch condition

Version 6.5.0, 6 August 2025
[FEATURE] Add hook to check if header field should be indexed and move the the check into a dedicated method. Thanks to Joost. https://github.com/tpwd/ke_search/pull/297
[BUGFIX]  Fix potential null return in preg_replace usage
[BUGFIX]  Fix wrong highlighting of HTML tags. Thanks to CodeKapitän. https://github.com/tpwd/ke_search/issues/298
[TASK]    Refactor indexer command to use explicit call source constant, https://github.com/tpwd/ke_search/issues/99
[TASK]    Respect language for linked files and refactor attached files handling, https://github.com/tpwd/ke_search/issues/82

Version 6.4.1, 2 May 2025
[BUGFIX]  Query in search link breaks if non-default search word parameter contains an &. Thanks to jschlier. https://github.com/tpwd/ke_search/issues/289
[BUGFIX]  Nested containers children will get indexed even if parent container is deactivated. Thanks to hotbytes-dev. https://github.com/tpwd/ke_search/issues/286
[BUGFIX]  Content elements are indexed in hidden nested gridelements. https://github.com/tpwd/ke_search/issues/176
[BUGFIX]  Ensure pages without content are removed in incremental indexing, https://github.com/tpwd/ke_search/issues/292
[TASK]    Hide unnecessary "pages" and "recursive" fields in result list plugin settings

Version 6.4.0, 14 March 2025
[FEATURE] Index tag titles as hidden content, https://github.com/tpwd/ke_search/issues/183
[FEATURE] Set default sorting direction for "customranking" to "desc". Thanks to Markus Hackel. https://github.com/tpwd/ke_search/issues/279
[BUGFIX]  Fix typo in constants.typoscript filename. Thanks to nebrot. https://github.com/tpwd/ke_search/commit/e762364111a78ea8b2378b634ca7cf77d3ae0903#r151745378
[BUGFIX]  Prevent undefined array key in page indexer. Thanks to Markus Hackel. https://github.com/tpwd/ke_search/pull/283