@@ -95,7 +95,7 @@ class File extends IndexerBase
      */
     public function startIndexing(): string
     {
-        $directories = $this->indexerConfig['directories'];
+        $directories = $this->indexerConfig['directories'] ?? '';
         $directoryArray = GeneralUtility::trimExplode(',', $directories, true);
 
         $fileCollections = $this->indexerConfig['file_collections'];
@@ -435,7 +435,7 @@ class File extends IndexerBase
 
         // get data from FAL
         if ($file instanceof \TYPO3\CMS\Core\Resource\File) {
-            // get file properties for this file, this information is merged from file record and meta information
+            // get file properties for this file. This information is merged from file record and metadata
             $fileProperties = $file->getProperties();
             $orig_uid = $file->getUid();
             $language_uid = $this->detectFileLanguage($fileProperties);
@@ -474,39 +474,36 @@ class File extends IndexerBase
             'hash' => $this->getUniqueHashForFile(),
         ];
 
-        // add metadata content, frontend groups and catagory tags if FAL is used
-        if ($this->indexerConfig['fal_storage'] > 0) {
-            // index meta data from FAL: title, description, alternative
-            if ($fileProperties) {
-                $content = $this->addFileMetata($fileProperties, $content);
-            }
+        if ($fileProperties) {
+            // index metadata from FAL: title, description, alternative
+            $content = $this->addFileMetata($fileProperties, $content);
 
             // use file description as abstract
             $indexRecordValues['abstract'] = $fileProperties['description'] ?? '';
 
             // respect groups from metadata
             $indexRecordValues['fe_group'] = $fileProperties['fe_groups'] ?? '';
+        }
 
-            // get list of assigned system categories
-            if (isset($metaDataProperties['uid'])) {
-                $categories = SearchHelper::getCategories(
-                    $metaDataProperties['uid'],
-                    'sys_file_metadata'
-                );
+        // get the list of assigned system categories
+        if (isset($metaDataProperties['uid'])) {
+            $categories = SearchHelper::getCategories(
+                $metaDataProperties['uid'],
+                'sys_file_metadata'
+            );
 
-                // make Tags from category titles
-                SearchHelper::makeTags(
-                    $indexRecordValues['tags'],
-                    $categories['title_list']
-                );
+            // make Tags from category titles
+            SearchHelper::makeTags(
+                $indexRecordValues['tags'],
+                $categories['title_list']
+            );
 
-                // assign categories as generic tags (eg. "syscat123")
-                SearchHelper::makeSystemCategoryTags(
-                    $indexRecordValues['tags'],
-                    $metaDataProperties['uid'],
-                    'sys_file_metadata'
-                );
-            }
+            // assign categories as generic tags (eg. "syscat123")
+            SearchHelper::makeSystemCategoryTags(
+                $indexRecordValues['tags'],
+                $metaDataProperties['uid'],
+                'sys_file_metadata'
+            );
         }
 
         // hook for custom modifications of the indexed data, e. g. the tags
