@@ -1,6 +1,7 @@
 ChangeLog
 
 Upcoming version
+[FEATURE] Allow File Collections to be indexed. Thanks to Mike Street. https://github.com/tpwd/ke_search/pull/301
 [TASK]    Refine in-word search logic with SphinxSearch condition
 
 Version 6.5.0, 6 August 2025
